--- a/content/posts/sample-post/index.mdx
+++ b/content/posts/sample-post/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: Fantastic Beasts and Where to Find Them
-date: 2019-11-01
+title: Sample Post
+date: 2021-05-17
 tags:
-  - Novel
+  - Introduction
+banner: ./defence-against-the-dark-arts.jpg
 ---
 
 import SpotifyPlayer from "./SpotifyPlayer";
