--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,6 +5,6 @@ slug: "/about"
 
 Hi!
 
-Remus Lupin - also known as Moony - is currently teaching "Defense against the Dark Arts" at Hogwarts. He was afflicted with lycanthropy during his childhood, as a result of Fenrir Greyback's revenge against Lyall. He attended Hogwarts School of Witchcraft and Wizardry from 1971-1978 and was Sorted into Gryffindor House. During his school years he was one of the Marauders, best friends with Sirius Black, James Potter, and Peter Pettigrew. Together they created the Marauder's Map.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue eu leo non venenatis. Maecenas sed auctor orci. Phasellus ut suscipit enim, sed volutpat dolor. Curabitur id gravida eros. Morbi posuere quam ut maximus pharetra. Donec a purus id massa congue imperdiet. Suspendisse vitae arcu condimentum, mattis est ac, ornare diam. Cras volutpat condimentum hendrerit. Quisque vitae hendrerit justo, quis interdum neque. Ut nec elit et dui commodo posuere.
 
-He fought against Death Eaters once more in the Second Wizarding War, during which he lost his friend Sirius. In 1997, Remus married fellow Order member Nymphadora Tonks and had a son, Edward Remus Lupin, of whom he named Harry the godfather. Remus fought at the Battle of Hogwarts on 2 May, 1998, during which his wife was murdered by Bellatrix Lestrange. Remus was also murdered by Death Eater, Antonin Dolohov, during the first half of the same battle. His death was avenged by Filius Flitwick.
+Morbi tincidunt hendrerit elit, vitae aliquam turpis malesuada et. Donec ornare eu purus sed dignissim. Fusce congue eu erat ac ultricies. Nam cursus faucibus dui, vitae mollis diam malesuada vel.
