update about and intro

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,6 +5,7 @@ slug: "/about"
 
 Hi!
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue eu leo non venenatis. Maecenas sed auctor orci. Phasellus ut suscipit enim, sed volutpat dolor. Curabitur id gravida eros. Morbi posuere quam ut maximus pharetra. Donec a purus id massa congue imperdiet. Suspendisse vitae arcu condimentum, mattis est ac, ornare diam. Cras volutpat condimentum hendrerit. Quisque vitae hendrerit justo, quis interdum neque. Ut nec elit et dui commodo posuere.
-
-Morbi tincidunt hendrerit elit, vitae aliquam turpis malesuada et. Donec ornare eu purus sed dignissim. Fusce congue eu erat ac ultricies. Nam cursus faucibus dui, vitae mollis diam malesuada vel.
+My name is Marlin. Writing my first shell script in high school felt like having a superpower. I've been hooked ever since. 
+During my career I've worked on more and more complex systems and become increasingly dissatisfied by our inability as software developers to cope with complexity. 
+After years as a software practitioner I've discovered my primary motivation is to help developers be better at building better software. 
+The conclusion I can't avoid is that we don't need better and better ways to build software, we need a magnitudinal shift. A better better way.
