--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,2 +1,4 @@
-If you are reading this perhaps you are like me, a technologist disillusioned by the dysfunction of industrial software development. 
-After thinking on this a great deal I decided to formulate these thoughts into words and subject those words to critique in hopes of producing higher quality thinking and maybe even helping others. The result is a living chronology of rhetorical artifacts seeking to discover how a love for programming is lost and how to get it back.
+If you are reading this perhaps you are like me, a technologist disillusioned and unsatisfied by the practice of software development in industry. 
+The daily dysfunction of building commercial software is far from the engineering discipline I imagined it to be. 
+Though I've spent a great deal of time thinking about this problem, pure contemplation has accomplished nothing productive. 
+**How a love for programming is lost and how to get it back**, is the motivating question. The following inquiry is an earnest attempt to develop an answer.
